修复BannerLayoutManger问题 新增ViewPagerLayoutManagerActivity进度条问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
             android:theme="@style/AppTheme.Skid_1"
             >
         </activity>
+        <activity android:name=".LinearSnapHelperActivity"/>
     </application>
 
 </manifest>
